--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>prassee</groupId>
-	<artifactId>scala-maven-project</artifactId>
+	<artifactId>scala-swift</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
-	<description>My wonderfull scala app</description>
+	<description>scala swift api</description>
 	<inceptionYear>2013</inceptionYear>
 
 	<properties>
@@ -16,28 +16,34 @@
 		<scala.version>2.10.0</scala.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>big bee consultants</id>
+			<url>http://repo.bigbeeconsultants.co.uk/repo</url>
+		</repository>
+		<repository>
+			<id>spray</id>
+			<url>http://repo.spray.io/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
 			<version>${scala.version}</version>
 		</dependency>
+		<!-- scala http client -->
 		<dependency>
-			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-actor_2.10</artifactId>
-			<version>2.2.1</version>
+			<groupId>uk.co.bigbeeconsultants</groupId>
+			<artifactId>bee-client_2.10</artifactId>
+			<version>0.22.7</version>
 		</dependency>
 		<dependency>
-			<groupId>com.twitter</groupId>
-			<artifactId>finagle-core_2.10</artifactId>
-			<version>6.2.0</version>
+			<groupId>io.spray</groupId>
+			<artifactId>spray-json_2.10</artifactId>
+			<version>1.2.5</version>
 		</dependency>
-		<dependency>
-			<groupId>com.twitter</groupId>
-			<artifactId>finagle-http_2.10</artifactId>
-			<version>6.2.0</version>
-		</dependency>
-
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
